--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=yes" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
@@ -61,7 +61,7 @@
         병실번호: <input type="text" class="inputbox" id="wardid" placeholder="병실번호" value="0000"><br/>
         환자명: <input type="text" class="inputbox" id="patientid" placeholder="환자명" value="홍길동"><br/>
         <hr>
-        <button type="submit" onclick="app.sendSms()" value="Send SMS" class="btn btn-info">SMS로통보</button>
+        <button type="submit" onclick="app.sendSms()" value="Send SMS" class="btn btn-info">SMS로 보냄</button>
 
     </form>
     </div>
