--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		        <p id="deviceProperties">문의사항은 053-475-7575로 연락주세요.</p>
             </div>
     <form>
-        전화번호: <input type="text" class="inputbox" id="mobileid" placeholder="전화번호" value="00000000000"><br/>
+        전화번호: <input type="text" class="inputbox" id="mobileid" placeholder="본인번호" value="00000000000"><br/>
         병원: <input type="text" class="inputbox" id="hospitalid" placeholder="병원" value="ㄱㄴㄷㄹ"><br/>
         보조기: <input type="text" class="inputbox" id="orthoid" placeholder="보조기" value="보조기"><br/>
         병실번호: <input type="text" class="inputbox" id="wardid" placeholder="병실번호" value="0000"><br/>
