--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         병실번호: <input type="text" class="inputbox" id="wardid" placeholder="병실번호" value="0000"><br/>
         환자명: <input type="text" class="inputbox" id="patientid" placeholder="환자명" value="홍길동"><br/>
         <hr>
-        <button type="submit" onclick="app.sendSms()" value="Send SMS" class="btn btn-info">SMS로 보냄</button>
+        <button onclick="app.sendSms();restore();" value="Send SMS" class="btn btn-info">SMS로 보냄</button>
 
     </form>
     </div>
